--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "watch": "ng serve",
-    "build": "ng build --prod --output-path dist",
+    "build": "ng build --prod --output-path dist --base-href=/homebridge.io",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
