--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "homebridge",
+  "name": "homebridge.io",
+  "description": "The https://homebridge.io website",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -12,21 +13,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.4",
-    "@angular/common": "~10.0.4",
-    "@angular/compiler": "~10.0.4",
-    "@angular/core": "~10.0.4",
-    "@angular/forms": "~10.0.4",
-    "@angular/localize": "~10.0.4",
-    "@angular/platform-browser": "~10.0.4",
-    "@angular/platform-browser-dynamic": "~10.0.4",
-    "@angular/router": "~10.0.4",
+    "@angular/animations": "^10.0.6",
+    "@angular/common": "^10.0.6",
+    "@angular/compiler": "^10.0.6",
+    "@angular/core": "^10.0.6",
+    "@angular/forms": "^10.0.6",
+    "@angular/localize": "^10.0.6",
+    "@angular/platform-browser": "^10.0.6",
+    "@angular/platform-browser-dynamic": "^10.0.6",
+    "@angular/router": "^10.0.6",
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
@@ -37,8 +37,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.3",
     "@angular/cli": "~10.0.3",
-    "@angular/compiler-cli": "~10.0.4",
-    "@types/node": "^14.0.26",
+    "@angular/compiler-cli": "^10.0.6",
+    "@types/node": "^14.0.27",
     "codelyzer": "^6.0.0",
     "ts-node": "^8.10.2",
     "tslint": "~6.1.0",
