--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.6",
-    "@angular/common": "^10.0.6",
-    "@angular/compiler": "^10.0.6",
-    "@angular/core": "^10.0.6",
-    "@angular/forms": "^10.0.6",
-    "@angular/localize": "^10.0.6",
-    "@angular/platform-browser": "^10.0.6",
-    "@angular/platform-browser-dynamic": "^10.0.6",
-    "@angular/router": "^10.0.6",
+    "@angular/animations": "^10.1.6",
+    "@angular/common": "^10.1.6",
+    "@angular/compiler": "^10.1.6",
+    "@angular/core": "^10.1.6",
+    "@angular/forms": "^10.1.6",
+    "@angular/localize": "^10.1.6",
+    "@angular/platform-browser": "^10.1.6",
+    "@angular/platform-browser-dynamic": "^10.1.6",
+    "@angular/router": "^10.1.6",
     "@fortawesome/angular-fontawesome": "^0.7.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-regular-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "bootstrap": "^4.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
-    "rxjs": "^6.6.0",
-    "tslib": "^2.0.0",
+    "rxjs": "^6.6.3",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.3",
-    "@angular/cli": "~10.0.3",
-    "@angular/compiler-cli": "^10.0.6",
-    "@types/node": "^14.0.27",
-    "codelyzer": "^6.0.0",
+    "@angular-devkit/build-angular": "^0.1001.7",
+    "@angular/cli": "^10.0.8",
+    "@angular/compiler-cli": "^10.1.6",
+    "@types/node": "^14.14.0",
+    "codelyzer": "^6.0.1",
     "ts-node": "^8.10.2",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "~3.9.5"
   }
 }
