test spa routing

--- a/angular.json
+++ b/angular.json
@@ -48,7 +48,10 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
+              "src/sitemap.txt",
+              "src/robots.txt",
               "src/CNAME",
+              "src/404.html",
               "src/assets/images/favicon.ico",
               "src/assets"
             ],
@@ -59,7 +62,8 @@
               "src/assets/background.js",
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/marked/lib/marked.js"
             ]
           },
           "configurations": {
