--- a/package.json
+++ b/package.json
@@ -13,37 +13,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.0.4",
-    "@angular/common": "^12.0.4",
-    "@angular/compiler": "^12.0.4",
-    "@angular/core": "^12.0.4",
-    "@angular/forms": "^12.0.4",
-    "@angular/localize": "^12.0.4",
-    "@angular/platform-browser": "^12.0.4",
-    "@angular/platform-browser-dynamic": "^12.0.4",
-    "@angular/router": "^12.0.4",
-    "@fortawesome/angular-fontawesome": "^0.9.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "bootstrap": "^4.6.0",
-    "core-js": "^3.14.0",
+    "@angular/animations": "^13.3.4",
+    "@angular/common": "^13.3.4",
+    "@angular/compiler": "^13.3.4",
+    "@angular/core": "^13.3.4",
+    "@angular/forms": "^13.3.4",
+    "@angular/localize": "^13.3.4",
+    "@angular/platform-browser": "^13.3.4",
+    "@angular/platform-browser-dynamic": "^13.3.4",
+    "@angular/router": "^13.3.4",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "bootstrap": "^4.6.1",
+    "core-js": "^3.22.2",
     "jquery": "^3.6.0",
-    "ngx-markdown": "^12.0.1",
+    "ngx-markdown": "^13.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.7",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.4.0",
+    "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.0.4",
-    "@angular/cli": "^12.0.4",
-    "@angular/compiler-cli": "^12.0.4",
-    "@types/node": "^15.12.2",
+    "@angular-devkit/build-angular": "^13.3.3",
+    "@angular-eslint/schematics": "^13.2.1",
+    "@angular/cli": "^13.3.3",
+    "@angular/compiler-cli": "^13.3.4",
+    "@types/node": "^15.14.9",
     "codelyzer": "^6.0.2",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.7.0",
     "tslint": "^6.1.3",
-    "typescript": "~4.2.4"
+    "typescript": "~4.6.3"
   }
 }
