--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng serve",
     "build": "ng build --prod --output-path dist",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "ng lint --max-warnings=0",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -38,11 +38,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.3",
-    "@angular-eslint/schematics": "^13.2.1",
+    "@angular-eslint/builder": "13.2.1",
+    "@angular-eslint/eslint-plugin": "13.2.1",
+    "@angular-eslint/eslint-plugin-template": "13.2.1",
+    "@angular-eslint/schematics": "13.2.1",
+    "@angular-eslint/template-parser": "13.2.1",
     "@angular/cli": "^13.3.3",
     "@angular/compiler-cli": "^13.3.4",
     "@types/node": "^15.14.9",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
     "codelyzer": "^6.0.2",
+    "eslint": "^8.12.0",
     "ts-node": "^10.7.0",
     "tslint": "^6.1.3",
     "typescript": "~4.6.3"
