--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "watch": "ng serve",
-    "build": "ng build --prod --output-path dist",
+    "build": "ng build --configuration production --output-path dist",
     "test": "ng test",
     "lint": "ng lint --max-warnings=0",
     "e2e": "ng e2e"
