--- a/angular.json
+++ b/angular.json
@@ -135,8 +135,9 @@
       }
     }
   },
-  "defaultProject": "homebridge",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
