--- a/package.json
+++ b/package.json
@@ -13,45 +13,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.5",
-    "@angular/common": "^14.0.5",
-    "@angular/compiler": "^14.0.5",
-    "@angular/core": "^14.0.5",
-    "@angular/forms": "^14.0.5",
-    "@angular/localize": "^14.0.5",
-    "@angular/platform-browser": "^14.0.5",
-    "@angular/platform-browser-dynamic": "^14.0.5",
-    "@angular/router": "^14.0.5",
+    "@angular/animations": "^14.3.0",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/localize": "^14.3.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "bootstrap": "^4.6.1",
+    "bootstrap": "^4.6.2",
     "core-js": "^3.22.2",
-    "jquery": "^3.6.0",
-    "ngx-markdown": "^13.1.0",
+    "jquery": "^3.7.1",
+    "ngx-markdown": "^14.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.7",
-    "tslib": "^2.4.0",
-    "zone.js": "^0.11.5"
+    "tslib": "^2.6.2",
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.5",
+    "@angular-devkit/build-angular": "^14.2.13",
     "@angular-eslint/builder": "14.0.0",
     "@angular-eslint/eslint-plugin": "14.0.0",
     "@angular-eslint/eslint-plugin-template": "14.0.0",
     "@angular-eslint/schematics": "14.0.0",
     "@angular-eslint/template-parser": "14.0.0",
-    "@angular/cli": "^14.0.5",
+    "@angular/cli": "^14.2.13",
     "@angular/compiler-cli": "^14.0.5",
-    "@types/node": "^15.14.9",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
+    "@types/node": "^18.18.8",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "codelyzer": "^6.0.2",
-    "eslint": "^8.18.0",
-    "ts-node": "^10.7.0",
+    "eslint": "^8.52.0",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
-    "typescript": "~4.6.3"
+    "typescript": "^4.8.4"
   }
 }
